# worldcup-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
contracts/: __init__.py  schema.py
docs/: DESIGN_RECENT_FORM.md  EXPERIMENT_LOG.md  MODEL_SCORECARD.md  PROJECT_CONTEXT.md
outputs/models/: best_params.json
pipelines/: features.py  preprocessing.py
pipelines/training/: train.py  tune.py
tests/: test_features.py  test_models.py  test_preprocessing.py  test_schemas.py
